--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
+
+spring.datasource.driver-class-name: com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/notedb
+spring.datasource.username=root
+spring.datasource.password
+spring.jpa.openInView=false
+spring.jpa.show_sql=true
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=create
