all requirements met

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
 #    hibernate:
 #      ddl-auto: create
 
+
   data:
     mongodb:
+      uri: mongodb://172.23.239.247/mydb
       database: mydb
+      host: 172.23.239.247
+      port: 27017
